# L-Controller

./: .clangd  .gitignore  README.md  package-lock.json  package.json  playwright.config.js
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation-refactor/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md  deferred-items.md
.planning/phases/02-wi-fi-supervision/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md  deferred-items.md
.planning/phases/03-recovery-watchdog/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-persistent-configuration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md  deferred-items.md
.planning/phases/05-local-control-panel/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md  deferred-items.md
.planning/phases/06-action-engine-relay-control/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VALIDATION.md  06-VERIFICATION.md  deferred-items.md
.planning/phases/07-scheduling/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/phases/08-ota-lifecycle/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-VALIDATION.md  08-VERIFICATION.md  deferred-items.md
.planning/phases/09-configured-action-model-and-panel-management/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md  09-VALIDATION.md  09-VERIFICATION.md
.planning/quick/1-make-sure-our-html-styles-are-only-tailw/: 1-CONTEXT.md  1-PLAN.md  1-SUMMARY.md  1-VERIFICATION.md
.planning/quick/2-build-flash-and-add-a-playwright-login-s/: 2-CONTEXT.md  2-PLAN.md  2-SUMMARY.md  2-VERIFICATION.md
.planning/quick/3-make-dedicated-login-page-with-proper-re/: 3-CONTEXT.md  3-PLAN.md  3-SUMMARY.md  3-VERIFICATION.md
.planning/quick/4-test-ota-update-build-next-version-with-/: 4-CONTEXT.md  4-PLAN.md  4-SUMMARY.md  4-VERIFICATION.md
.planning/quick/5-simplify-dashboard-into-page-navigation-/: 5-CONTEXT.md  5-PLAN.md  5-SUMMARY.md  5-VERIFICATION.md
.planning/quick/6-review-every-panel-page-split-bulky-surf/: 6-CONTEXT.md  6-PLAN.md  6-SUMMARY.md  6-VERIFICATION.md
.planning/quick/7-fix-panel-http-navigation-stalls-by-isol/: 7-CONTEXT.md  7-PLAN.md  7-SUMMARY.md  7-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.zed/: settings.json
app/: CMakeLists.txt  Kconfig  VERSION  pm_static.yml  prj.conf  sections-rom.ld  sysbuild.conf  wifi.secrets.conf.example
app/boards/: nrf7002dk_nrf5340_cpuapp.overlay
app/src/: main.c
app/src/actions/: actions.c  actions.h
app/src/app/: app_config.h  app_context.h  bootstrap.c  bootstrap.h
app/src/network/: network_state.h  network_supervisor.c  network_supervisor.h  reachability.c  reachability.h  wifi_lifecycle.c  wifi_lifecycle.h
app/src/ota/: ota.c  ota.h  ota_github_ca_certs.h
app/src/panel/: panel_auth.c  panel_auth.h  panel_http.c  panel_http.h  panel_status.c  panel_status.h
app/src/panel/assets/: action-editor.html  index.html  login.html  main.js  overview.html  panel.css  panel.tailwind.css  schedule-editor.html  schedules.html  updates.html
app/src/persistence/: persistence.c  persistence.h  persistence_types.h
app/src/recovery/: recovery.c  recovery.h
app/src/relay/: relay.c  relay.h
app/src/scheduler/: scheduler.c  scheduler.h
app/sysbuild/mcuboot/: prj.conf
app/sysbuild/mcuboot/boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
scripts/: bootstrap-macos.sh  build.sh  clean.sh  common.sh  console.sh  doctor.sh  fetch-ncs.sh  flash.sh  validate.sh
tests/: panel-login.spec.js
tests/helpers/: panel-target.js
(+8 files in other folders)
